<resources>
    <string name="app_name">Registration Form</string>
    <string name="btnRegister">Register</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="welcome">👋 Welcome, glad to have you here</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phone_no">Phone No:</string>
    <string name="full_name">Full name</string>
    <string name="close">Close</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
</resources>